--- a/package.json
+++ b/package.json
@@ -12,13 +12,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.4",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "css-modules-typescript-loader": "^4.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^5.0.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.165",
+    "classnames": "^2.2.6",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
