--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.165"
   },
   "dependencies": {
-    "@types/classnames": "^2.2.11",
-    "@types/lodash": "^4.14.165",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20"
