--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/jquery": "^3.5.4",
+    "@types/lodash": "^4.14.165",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-modules-typescript-loader": "^4.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-fsd": "^1.0.1",
+    "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
@@ -26,9 +34,7 @@
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "@types/classnames": "^2.2.11",
-    "@types/lodash": "^4.14.165"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
