--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack --mode=development --env mode=development serve",
     "build": "webpack --mode=production",
     "build:dev": "webpack --env mode=development --mode=development",
-    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
+    "lint": "eslint src/ --ext .ts,.js",
     "eslint:dump": "eslint --print-config ./.eslintrc.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
     "@types/lodash": "^4.14.165",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-fsd": "^1.0.1",
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "resolve-url-loader": "^3.1.2",
