--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
