replace eslint:recommended to airbnb-typescript, replace name types,

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,18 +7,14 @@
   },
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
+    "airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:fsd/all"
+    "plugin:fsd/all",
+    "plugin:eslint-comments/recommended",
+    "plugin:jest/recommended",
+    "prettier/@typescript-eslint"
   ],
-  /*
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  */
   "parserOptions": {
     "project": "tsconfig.json",
     "tsconfigRootDir": "."
