--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
     "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
     "@types/lodash": "^4.14.165",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-fsd": "^1.0.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
