--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
     "@types/lodash": "^4.14.165",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -36,6 +37,8 @@
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
