--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "publish": "git checkout master && git merge development && npm run build && git commit -am 'Deploy' && git push origin && git checkout @{-1}",
     "start": "webpack --mode=development --env mode=development serve",
     "build": "webpack --mode=production",
     "build:dev": "webpack --env mode=development --mode=development",
@@ -47,7 +48,11 @@
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
+    "bind-decorator": "^1.0.11"
   },
   "dependencies": {
     "classnames": "^2.2.6",
