--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
@@ -22,7 +25,9 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
+    "bind-decorator": "^1.0.11",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^7.14.0",
@@ -38,6 +43,7 @@
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.2",
@@ -48,11 +54,7 @@
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-proposal-decorators": "^7.12.13",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-    "bind-decorator": "^1.0.11"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
