--- a/package.json
+++ b/package.json
@@ -25,18 +25,23 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
-    "bind-decorator": "^1.0.11",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "css-modules-typescript-loader": "^4.0.1",
-    "eslint": "^7.14.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-fsd": "^1.0.1",
+    "eslint-plugin-i18n-json": "^3.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-pug": "^1.2.3",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
@@ -44,7 +49,7 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
-    "pug": "^3.0.0",
+    "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
@@ -57,6 +62,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "bind-decorator": "^1.0.11",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20"
