--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "air-range-slider",
+  "name": "range-slider",
   "version": "1.0.0",
   "description": "jQuery range slider",
-  "main": "/dist/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "start": "webpack --env mode=development serve",
+    "build": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development",
+    "eslint": "eslint --ext .ts src/",
+    "eslint:fix": "eslint --fix --ext .ts, src/",
+    "stylelint": "stylelint --config .stylelintrc.json \"./**/*.scss\"",
+    "pugLint": "pug-lint --config .pug-lintrc.json demo/",
+    "lint": "npm run eslint && npm run pugLint && npm run stylelint",
+    "lint:fix": "npm run eslint:fix && npm run pugLint && npm run stylelint",
     "test": "jest",
-    "start": "webpack --mode=development --env mode=development serve",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --env mode=development --mode=development",
-    "lint": "eslint src/ --ext .ts",
-    "eslint:dump": "eslint --print-config ./.eslintrc.json",
+    "test:coverage": "jest --coverage",
     "deploy": "gh-pages -d dist"
   },
   "homepage": "https://victordesyatkin.github.io/slider/index.html",
@@ -34,6 +40,16 @@
     "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
     "@types/lodash": "^4.14.165",
+    "@types/lodash.isfunction": "^3.0.6",
+    "@types/lodash.isobject": "^3.0.6",
+    "@types/lodash.isstring": "^4.0.6",
+    "@types/lodash.isundefined": "^3.0.6",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/lodash.orderby": "^4.6.6",
+    "@types/lodash.pick": "^4.4.6",
+    "@types/lodash.set": "^4.3.6",
+    "@types/lodash.trim": "^4.5.6",
+    "@types/lodash.uniq": "^4.5.6",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
@@ -62,10 +78,15 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "pug": "^3.0.2",
+    "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
@@ -77,6 +98,15 @@
     "bind-decorator": "^1.0.11",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.20"
+    "lodash.isfunction": "^3.0.9",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isstring": "^4.0.1",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.merge": "^4.6.2",
+    "lodash.orderby": "^4.6.0",
+    "lodash.pick": "^4.4.0",
+    "lodash.set": "^4.3.2",
+    "lodash.trim": "^4.5.1",
+    "lodash.uniq": "^4.5.0"
   }
 }
