--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": [
-    "stylelint-config-sass-guidelines",
-    "stylelint-config-standard",
-    "stylelint-config-recommended"
-  ]
+  "extends": ["stylelint-config-sass-guidelines"],
+  "rules": {
+    "max-nesting-depth": null,
+    "scss/at-mixin-pattern": null,
+    "scss/dollar-variable-pattern": null
+  }
 }
