--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "eslint:fix": "eslint --fix --ext .ts, src/",
     "stylelint": "stylelint --config .stylelintrc.json \"./**/*.scss\"",
     "stylelint:fix": "stylelint --fix --config .stylelintrc.json \"./**/*.scss\"",
-    "pugLint": "pug-lint --config .pug-lintrc.json demo/",
-    "lint": "npm run eslint && npm run pugLint && npm run stylelint",
-    "lint:fix": "npm run eslint:fix && npm run pugLint && npm run stylelint:fix",
+    "lint": "npm run eslint && npm run stylelint",
+    "lint:fix": "npm run eslint:fix && npm run stylelint:fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "deploy": "gh-pages -d dist"
@@ -54,6 +53,7 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.0",
+    "autoprefixer": "^9.8.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
@@ -76,10 +76,12 @@
     "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.2.8",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "pug": "^3.0.2",
-    "pug-lint": "^2.6.0",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
@@ -88,6 +90,8 @@
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^21.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
