--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,7 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
+  "include": ["src", "demo"],
   "exclude": [
     "node_modules",
     "dist",
