--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "fsd/jq-cache-dom-elements": "error",
     "fsd/jq-use-js-prefix-in-selector": "error",
     "fsd/no-function-declaration-in-event-listener": "error",
-    "fsd/split-conditionals": "error"
+    "fsd/split-conditionals": "error",
+    "@typescript-eslint/no-implied-eval": 0,
+    "no-restricted-syntax": 0
   }
 }
