--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@types/jest": "^26.0.18",
     "@types/jquery": "^3.5.4",
     "@types/lodash": "^4.14.165",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.isfunction": "^3.0.6",
     "@types/lodash.isobject": "^3.0.6",
     "@types/lodash.isstring": "^4.0.6",
     "@types/lodash.isundefined": "^3.0.6",
     "@types/lodash.merge": "^4.6.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/lodash.orderby": "^4.6.6",
     "@types/lodash.pick": "^4.4.6",
     "@types/lodash.set": "^4.3.6",
@@ -102,11 +104,13 @@
     "bind-decorator": "^1.0.11",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
+    "lodash.isequal": "^4.5.0",
     "lodash.isfunction": "^3.0.9",
     "lodash.isobject": "^3.0.2",
     "lodash.isstring": "^4.0.1",
     "lodash.isundefined": "^3.0.1",
     "lodash.merge": "^4.6.2",
+    "lodash.omit": "^4.5.0",
     "lodash.orderby": "^4.6.0",
     "lodash.pick": "^4.4.0",
     "lodash.set": "^4.3.2",
