--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
   "rules": {
     "max-nesting-depth": null,
     "scss/at-mixin-pattern": null,
-    "scss/dollar-variable-pattern": null
+    "scss/dollar-variable-pattern": null,
+    "function-parentheses-space-inside": null
   }
 }
